[package]
name = "combined"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18.1"
eframe = { version = "0.18.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
tinyfiledialogs = "3.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.18.1", features = ["rt-multi-thread"] }
futures = "0.3.21"
lazy_static = "1.4.0"
zip = "0.6.0"
# todo replace image with png
image = "0.24.1"
async-std = "1.11.0"
